fixed some alignment

--- a/src/Styles/about.css
+++ b/src/Styles/about.css
@@ -16,7 +16,7 @@
 	display: flex;
 	justify-content: space-between;
 	gap: 9rem;
-	padding: 4rem 0;
+	padding: 7rem 0;
 	align-items: flex-start;
 }
 
@@ -67,7 +67,7 @@
 	width: inherit;
 	height: inherit;
 	border-width: 0.15rem;
-	border-style:dashed;
+	border-style: dashed;
 	position: absolute;
 	top: 1rem;
 	left: 1rem;
