--- a/src/Styles/project_desc.css
+++ b/src/Styles/project_desc.css
@@ -18,6 +18,8 @@
 	display: flex;
 	flex-direction: column;
 	gap: 1rem;
+	font-size: 0.9rem;
+
 	letter-spacing: 1px;
 }
 .desc_tech {
@@ -25,6 +27,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 1rem;
+	font-size: 0.9rem;
 	letter-spacing: 1px;
 }
 
