--- a/src/Styles/projects.css
+++ b/src/Styles/projects.css
@@ -2,13 +2,13 @@
 	display: flex;
 	flex-direction: column;
 	width: 100%;
-	padding-top: 7rem;
+	padding: 7rem;
 }
 .project {
 	display: flex;
 	justify-content: space-between;
 	align-items: flex-start;
-	margin: 4rem 0;
+	margin: 7rem 0;
 	width: 100%;
 }
 .project_left {
@@ -26,7 +26,7 @@
 	display: grid;
 	place-items: center;
 }
-.more_link:hover{
+.more_link:hover {
 	text-decoration: underline;
 }
 
